# water-reminder-slint

./: CLAUDE.md  CROSS_PLATFORM_FEATURES.md  Cargo.toml  README.md
src/: main.rs
src/models/: mod.rs
src/utils/: data.rs  mod.rs  notification.rs  tray.rs
ui/: app.slint
