[package]
name = "water-reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.12.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify-rust = "4.11.7"
dirs = "5.0"
tray-icon = { version = "0.21.1", features = ["libxdo"] }
image = "0.24"

# Linux特定依赖
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

# Windows特定依赖
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "tlhelp32", "stringapiset"] }

[build-dependencies]
slint-build = "1.8"

[[bin]]
name = "water-reminder"
path = "src/main.rs"
